--- a/CS3113 Lunar Landers/CS3113 Lunar Landers.vcxproj.filters
+++ b/CS3113 Lunar Landers/CS3113 Lunar Landers.vcxproj.filters
@@ -52,5 +52,8 @@
     <Image Include="pixel_font.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Sky2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
